# cvif-astro-p1

./: .gitignore  CLAUDE.md  Final Proposal CVIF-Astro Form 2.docx  requirements.txt  select_transits.ipynb  selected_10_planets.csv  workshop_notebook.ipynb
DOST Proposal Files/: Astro - CVIF_GAD Score_DPMIS format.xlsx  Astro Form 5 Workplan.docx  Astro Form_4_Line Item Budget_CVIF.xlsx  Board Resolution - Authorization Deed of Donation.docx  Board Resolution - MOA CVIF Authorization.docx  CVIF Astro - Form 2 Detailed Project Proposal Form.docx  DOST Proposal Drafts.docx  Old Form 2 CVIF Astro.docx  Sworn Affidavit None Related to DOST.docx
data/: hs_sector_lc_cache.pkl  planets_batman_complete.csv  planets_conference_shortlist.csv  planets_merged.csv  planets_priority.csv  planets_ready_for_modeling.csv  planets_tess_best.csv  sector_lookup.csv  tc_manual_offsets.csv  tepcat_qualified.csv  tepcat_raw.csv  tess_coverage_raw.csv  transit_counts.csv  transit_sector_matrix.csv
notebooks/: mu_vs_beta_scatter.ipynb  (+17 more)
whitenoise/: CLAUDE.md  pyproject.toml
whitenoise/.claude/: settings.local.json
whitenoise/tests/: test_compare_batch.py  test_fitting.py  test_integration.py  test_models.py  test_msd_preprocess.py  test_pipeline.py  test_reader.py  test_viz.py
whitenoise/whitenoise/: __init__.py
whitenoise/whitenoise/analysis/: batch.py  compare.py  pipeline.py
whitenoise/whitenoise/core/: fitting.py  models.py  msd.py
whitenoise/whitenoise/io/: export.py  reader.py
whitenoise/whitenoise/utils/: preprocess.py
whitenoise/whitenoise/viz/: explore.py  publish.py
(+266 files in other folders)
