[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "whitenoise-swna"
version = "0.1.0"
description = "Stochastic White Noise Analysis with memory (Hida-Bernido framework)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=1.5",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
excel = ["openpyxl>=3.0"]
dev   = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["whitenoise*"]
